--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -3,13 +3,16 @@
 
 /* Color sidebar menu section */
 .wy-menu-vertical span.caption-text {
-    color: #3a7ca8;
+    color: #55a5d9;
     font-weight: bold;
     text-transform: uppercase;
 }
 .wy-menu-vertical p.caption { margin-bottom: 0; }
 
 .wy-menu-vertical ul { margin-bottom: 1.5em; }
+
+.wy-menu-vertical a { color: #d9d9d9; }
+.wy-menu-vertical li.current a { color: #404040; }
 
 /* Side scroll */
 .wy-side-scroll {
